# D-Tricopter

tricopter-lqr/: CMakeLists.txt
tricopter-lqr/config/: tricopter_default.yaml
tricopter-lqr/include/: config.hpp  control_allocation.hpp  dynamics.hpp  integrator.hpp  lqr.hpp  simulation.hpp
tricopter-lqr/src/: config.cpp  control_allocation.cpp  dynamics.cpp  integrator.cpp  lqr.cpp  main.cpp  simulation.cpp
tricopter-lqr/tests/: test_main.cpp
